--- a/bib/thesis.bib
+++ b/bib/thesis.bib
@@ -1,169 +1,99 @@
-@BOOK{angel2000,
-  title = {Interactive Computer Graphics : A Top-Down Approach with OpenGL},
-  publisher = {Addison Wesley Longman},
+@article{Diener2000,
+  author = {Diener, E.},
+  title = {Subjective well-being: The science of happiness and a proposal for a national index},
+  journal = {American Psychologist},
   year = {2000},
-  author = {Edward Angel},
-  address = {Boston, MA},
-  isbn = {0-201-38597-X}
+  volume = {55},
+  number = {1},
+  pages = {34--43}
 }
 
-@BOOK{angel2001,
-  title = {Batch-file Computer Graphics : A Bottom-Up Approach with QuickTime},
-  publisher = {Wesley Addison Longman},
-  year = {2001},
-  author = {Edward Angel},
-  address = {Boston, MA},
-  isbn = {0-201-38597-X}
+@article{McCabe2013,
+  author = {McCabe, S. and Johnson, S.},
+  title = {The happiness factor in tourism: Subjective well-being and social tourism},
+  journal = {Annals of Tourism Research},
+  year = {2013},
+  volume = {41},
+  pages = {42--65},
+  doi = {10.1016/j.annals.2012.12.001}
 }
 
-@BOOK{angel2002a,
-  title = {test second book by angel},
-  publisher = {Wesley Addison Longman},
-  year = {2001},
-  author = {Edward Angel},
-  address = {Boston, MA},
-  isbn = {0-201-38597-X}
+@article{DeVos2019,
+  author = {De Vos, J.},
+  title = {Analysing the effect of trip satisfaction on satisfaction with the leisure activity at the destination of the trip, in relationship with life satisfaction},
+  journal = {Transportation},
+  year = {2019},
+  volume = {46},
+  pages = {623--645},
+  doi = {10.1007/s11116-017-9812-0}
 }
 
-
-@ARTICLE{deussen2000,
-  author = {Oliver Deussen and Thomas Strothotte},
-  title = {Computer-Generated Pen-and-Ink Illustration of Trees},
-  journal = {``Proceedings of'' SIGGRAPH 2000},
-  year = {2000},
-  pages = {13--18},
-  address = {New Orleans, Louisiana},
-  editor = {Kurt Akeley},
-  isbn = {1-58113-208-5},
-  publisher = {ACM Press / ACM SIGGRAPH / Addison Wesley Longman},
-  series = {Computer Graphics Proceedings, Annual Conference Series}
+@article{Carneiro2019,
+  author = {Carneiro, M. J. and Eusébio, C.},
+  title = {Factors influencing the impact of tourism on happiness},
+  journal = {Anatolia},
+  year = {2019},
+  volume = {30},
+  number = {4},
+  pages = {475--496},
+  doi = {10.1080/13032917.2019.1632909}
 }
 
-@BOOK{hipr1997,
-  title = {Hypermedia Image Processing Reference},
-  publisher = {John Wiley \& Sons},
-  year = {1997},
-  author = {Robert Fisher and Simon Perkins and Ashley Walker and Erik Wolfart},
-  address = {New York, NY},
-  isbn = {0-471-96243-0}
+@article{Chen2019,
+  author = {Chen, S. and Fan, Y. and Cao, Y. and Khattak, A.},
+  title = {Assessing the relative importance of factors influencing travel happiness},
+  journal = {Travel Behaviour and Society},
+  year = {2019},
+  volume = {16},
+  pages = {185--191},
+  doi = {10.1016/j.tbs.2019.01.002}
 }
 
-@BOOK{goochandgooch2001,
-  title = {{Non-Photorealistic Rendering}},
-  publisher = {A K Peters},
-  year = {2001},
-  author = {Bruce Gooch and Amy Gooch},
-  address = {Natick, Massachusetts},
-  isbn = {1-56881-133-0}
+@article{Ettema2011,
+  author = {Ettema, D. and Gärling, T. and Eriksson, L. and Friman, M. and Olsson, L. E. and Fujii, S.},
+  title = {Satisfaction with travel and subjective well-being: Development and test of a measurement tool},
+  journal = {Transportation Research Part F: Traffic Psychology and Behaviour},
+  year = {2011},
+  volume = {14},
+  number = {3},
+  pages = {167--175},
+  doi = {10.1016/j.trf.2010.11.002}
 }
 
-@BOOK{goochandgooch2001a,
-  title = {Test second book by gooches},
-  publisher = {A K Peters},
-  year = {2001},
-  author = {Bruce Gooch and Amy Gooch},
-  address = {Natick, Massachusetts},
-  isbn = {1-56881-133-0}
+@article{Gao2021,
+  author = {Gao, X. and Sun, D.},
+  title = {Transport accessibility and social demand: A case study of the Tibetan Plateau},
+  journal = {PLOS ONE},
+  year = {2021},
+  volume = {16},
+  number = {9},
+  pages = {e0257028},
+  doi = {10.1371/journal.pone.0257028}
 }
 
-
-@ARTICLE{hertzmann2000,
-  author = {Aaron Hertzmann and Dennis Zorin},
-  title = {Illustrating Smooth Surfaces},
-  journal = {Proceedings of SIGGRAPH 2000},
-  year = {2000},
-  volume = {5},
-  number = {17},
-  pages = {517--526},
-  month = {July},
-  address = {New Orleans, Louisiana},
-  editor = {Kurt Akeley},
-  isbn = {1-58113-208-5},
-  publisher = {ACM Press / ACM SIGGRAPH / Addison Wesley Longman},
-  series = {Computer Graphics Proceedings, Annual Conference Series}
-}
-
-@BOOK{jain1989,
-  title = {Fundamentals of Digital Image Processing},
-  publisher = {Prentice-Hall},
+@inbook{Bollen1989,
+  author = {Bollen, Kenneth A.},
+  title = {Structural Equation Models with Observed Variables},
+  booktitle = {Structural Equations with Latent Variables},
+  chapter = {Four},
+  pages = {80--150},
+  publisher = {John Wiley \& Sons, Ltd},
   year = {1989},
-  author = {Anil K. Jain},
-  address = {Englewood Cliffs, New Jersey},
-  isbn = {0-13-336165-9}
+  isbn = {9781118619179},
+  doi = {10.1002/9781118619179.ch4},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/9781118619179.ch4},
+  eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/9781118619179.ch4},
+  keywords = {implied covariance matrix, structural equation models}
 }
 
-@INCOLLECTION{Molina1994,
-  author = {Molina,  S. T.  and Borkovec,  T. D.},
-  title = {The {P}enn {S}tate Worry Questionnaire: Psychometric properties and
-	associated characteristics},
-  booktitle = {Worrying: Perspectives on theory, assessment and treatment},
-  publisher = {Wiley},
-  year = {1994},
-  editor = {G. C. L. Davey and F. Tallis},
-  pages = {265-283},
-  address = {New York},
-  owner = {salzberg},
-  timestamp = {2007.04.18}
+@article{Hayes2009,
+  author = {Hayes, Andrew F.},
+  title = {Beyond Baron and Kenny: Statistical mediation analysis in the new millennium},
+  journal = {Communication Monographs},
+  year = {2009},
+  volume = {76},
+  number = {4},
+  pages = {408--420},
+  doi = {10.1080/03637750903310360},
+  url = {https://doi.org/10.1080/03637750903310360}
 }
-
-@PHDTHESIS{noble2002,
-  author = {Noble, Samuel G.},
-  title = {Turning images into simple line-art},
-  school = {Reed College},
-  year = {2002},
-  type = {Undergraduate thesis},
-  date-added = {2007-03-14 10:12:04 -0700},
-  date-modified = {2007-03-14 10:30:42 -0700}
-}
-
-@MISC{reedweb2007,
-  author = {Reed{\ }College},
-  title = {LaTeX Your Document},
-  month = {March},
-  year = {2007},
-  date-added = {2007-03-14 10:07:06 -0700},
-  date-modified = {2007-03-14 10:09:03 -0700},
-  lastchecked = {March 14, 2007},
-  url = {https://web.reed.edu/cis/help/LaTeX/index.html}
-}
-
-@BOOK{russ1995,
-  title = {{The Image Processing Handbook, Second Edition}},
-  publisher = {CRC Press},
-  year = {1995},
-  author = {John C. Russ},
-  address = {Boca Raton, Florida},
-  isbn = {0-8493-2516-1}
-}
-
-@ARTICLE{salisbury1997,
-  author = {Michael P. Salisbury and Michael T. Wong and John F. Hughes and David
-	H. Salesin},
-  title = {Orientable Textures for Image-Based Pen-and-Ink Illustration},
-  journal = {``Proceedings of'' SIGGRAPH 97},
-  year = {1997},
-  pages = {401--406},
-  month = {August},
-  address = {Los Angeles, California},
-  editor = {Turner Whitted},
-  isbn = {0-89791-896-7},
-  publisher = {Addison Wesley},
-  series = {Computer Graphics Proceedings, Annual Conference Series}
-}
-
-@BOOK{savitch2001,
-  title = {JAVA: An Introduction to Computer Science \& Programming},
-  publisher = {Prentice Hall},
-  year = {2001},
-  author = {Walter Savitch},
-  address = {Upper Saddle River, New Jersey},
-  isbn = {0-13-031697-0}
-}
-
-@MASTERSTHESIS{wong1999,
-  author = {Eric Wong},
-  title = {{Artistic Rendering of Portrait Photographs}},
-  school = {Cornell University},
-  year = {1999}
-}
-
