--- a/01-chap1.Rmd
+++ b/01-chap1.Rmd
@@ -1,100 +1,9 @@
-<!--
-This is for including Chapter 1.  Notice that it's also good practice to name your chunk.  This will help you debug potential issues as you knit.  The chunk above is called intro and the one below is called chapter1.  Feel free to change the name of the Rmd file as you wish, but don't forget to change it here from chap1.Rmd.
--->
-
-<!--
-The {#rmd-basics} text after the chapter declaration will allow us to link throughout the document back to the beginning of Chapter 1.  These labels will automatically be generated (if not specified) by changing the spaces to hyphens and capital letters to lowercase.  Look for the reference to this label at the beginning of Chapter 2.
--->
-
-# Introduction and Background
+# Introduction and Background {#rmd-basics}
 
 ## Introduction
 
+Subjective well-being is the psychological assessment of people’s lives, including their emotional response to incidents and cognitive perceptions on life quality [@Diener2000]. The shift of well-being assessment from merely evaluating objective elements (wealth etc.) to incorporating multiple subjective indicators of assessment occurs in recent times as previous methods fail to determine the quality of life [@McCabe2013; @DeVos2019].
 
+The relationships of tourism and SWB has been an emerging interest for many scholars to dig into. There are firm evidence that indicates tourism generally contributes to social tourists’ well-being [@McCabe2013]. Scholars often use two-step surveys to explore the effect outdoor travel has on well-being improvement. Whilst another line of research focuses on the intrinsic mechanisms of the relationship, probing into how possible factors of tourism like built environment and travel behavior affect trip satisfaction and its internal interaction effects [@Carneiro2019]. While among the varied indicators of detecting respondents' SWB, satisfaction is an effective factor to represent people's perceived subjective feeling towards a either short or long activity[Chen2019].
 
-The study area, Qinghai-Tibet Plateau, or referred to as Tibetan Plateau, is situated in the western region of China and characterized by its high altitude averaging over 4,000 meters. Due to its low population density and an extremely alpine climate, it exhibits a unique set of travel behavioral patterns for local residents or outside tourists. Furthermore, in recent years, the plateau has witnessed rapid infrastructural development invested by Chinese government, and a significant surge in tourist influx. Despite this growth, scholarly investigations into travel behaviors, satisfaction levels, and the broader implications of these developments on local and visiting populations remain scant.
-
-
-
-
-
-
-# R Markdown Basics --> Introduction {#rmd-basics}
-<!--
-Would treat each first-level header as a separate chapter
--->
-<!--
-can change "#rmd-basics" to "intro" to replace the "Chapter X"
-
-don't know why this is helpful
--->
-
-Here is a brief introduction into using _R Markdown_. _Markdown_ is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. _R Markdown_ provides the flexibility of _Markdown_ with the implementation of **R** input and output.  For more details on using _R Markdown_ see <https://rmarkdown.rstudio.com>.  
-
-Be careful with your spacing in _Markdown_ documents.  While whitespace largely is ignored, it does at times give _Markdown_ signals as to how to proceed. As a habit, try to keep everything left aligned whenever possible, especially as you type a new paragraph. In other words, there is no need to indent basic text in the Rmd document (in fact, it might cause your text to do funny things if you do).
-
-Here is a reference to @angel2000.
-
-## Writing
-
-You can use `R` code in your document. For example:
-
-````markdown
-`r ''````{r ch1-load-packages, message=FALSE}
-plot(cars)
-```
-
-```{r ch1-load-packages, echo = FALSE, message=FALSE}
-library(tidyverse)
-```
-
-Naming the code chunks is convenient for navigating your document. You can use chunk options to control what the code does and how it is displayed. See Yihui Xie's documentation about chunk options https://yihui.org/knitr/options/. In the chunk above `message=FALSE` forces the chunk to not display messages when the packages are loaded.
-
-Of course, unless you are explicitly illustrating/discussing the code, you might not want the code to appear in the thesis! As another example, a chunk would _not_ be displayed _at all_ in the output document if `echo=FALSE`.
-
-```{r ch1-load-data, echo=FALSE}
-data(mpg)
-```
-
-You can create elegant figures and tables using `R` and displaying them in your thesis.
-
-Figure \ref{fig:ch1-scatterplot} is an example of a figure generated using the package `ggplot`.
-
-```{r ch1-scatterplot, echo=FALSE, out.width="0.8\\linewidth", fig.cap="\\label{fig:ch1-scatterplot}Example of a scatterplot"}
-ggplot(data = mpg) +
-  geom_point(aes(x = displ, y = hwy))
-```
-
-Table \ref{tab:summary-statistics} is an example of a table created using the package `kableExtra`.
-
-```{r ch1-table, echo=FALSE, warning=FALSE}
-kableExtra::kable(mpg %>%
-                    select(displ, year, cyl) %>%
-                    summary(),
-                  "latex",
-                  booktabs = TRUE,
-                  caption = "\\label{tab:summary-statistics}Example of a table with summary statistics")
-```
-
-Table \ref{tab:summary-statistics-2} is the same as Table \ref{tab:summary-statistics}, but placed in landscape orientation. Landscape orientation is useful for wide tables or for large figures.
-
-<!-- To use landscape orientation start a new page with \newpage and begin the landscape with \begin{landscape}-->
-
-<!-- You can have one or multiple pages in landscape, and when you are ready to switch to portrait orientation remember to end the landscape with \end{landscape} -->
-
-\newpage
-\blandscape
-<!-- if you want to use landscape -->
- 
-
-```{r ch1-table-2, echo=FALSE, warning=FALSE}
-kableExtra::kable(mpg %>%
-                    select(displ, year, cyl) %>%
-                    summary(),
-                  "latex",
-                  booktabs = TRUE,
-                  caption = "\\label{tab:summary-statistics-2}Example of a table in a landscape page")
-```
-
-\elandscape
-\newpage
+This study digs into the relationships between travel satisfaction and other factors such as travel modes, travel frequency, travel distance and tourists' perceived tourist attraction environment and road environment. The core research questions is: what kind of factors would greatly impact local and non-local tourists' travel behavior and their travel satisfaction on Qinghai-Tibet Plateau.
