--- a/99-references.Rmd
+++ b/99-references.Rmd
@@ -34,5 +34,6 @@ This is just for testing with more citations for the bibliography at the end.  A
 
 ---
 nocite: | 
-  @angel2000, @angel2001, @angel2002a
+  @deussen2000, @hipr1997, @goochandgooch2001, @goochandgooch2001a, @hertzmann2000, @jain1989, 
+  @Molina1994, @noble2002, @reedweb2007, @russ1995, @salisbury1997, @savitch2001, @wong1999
 ...
