--- a/index.Rmd
+++ b/index.Rmd
@@ -9,7 +9,6 @@ subject: 'Geography'
 instructor: 'Antonio Paez'
 bdegree: 'B.Sc.' # Bachellor's Degree
 mdegree: ''   # Master's Degree (if any)
-# This is the degree you are aiming for with this thesis
 degree: 'Doctor of Philosophy'
 
 knit: bookdown::render_book
@@ -28,7 +27,7 @@ abstract: |
   This paper is the final project work for course GEOG712. It ueses a 
 # Note that a tab is needed on the line after the `|`. Subsequent paragraphs need to be indented too.
 acknowledgements: |
-  I want to thank Dr. Huaxiong Jiang and ... for. And for Dr. Antonio Paez for leading me into learning R and using Github for the first time. I had long been afraid and at practicing, but thankfully this course proved to be worthwhile. 
+  I would like to thank Dr. Huaxiong Jiang and my undergrad fellows in old days for helping me with research design and questionnaire distributing. I would also like to thank Dr. Antonio Paez for teaching this course and guiding me throughout the whole semester to learn from scratch about R and Github. With limited coding experiences before, I had been exposed to a lot of new ideas and thoughts on doing research itself. Mostly importantly, I am glad that I got to have the chance to build my own coding space little by little through detailed instructions, and that I could have little more confidence in coding skills instead of anxiety and upset. Anyways, this course surely would shed a very important light in my subsequent years of pursuing a PhD and a possible academic career.
 declarations: |
   I did most of the research.
   
@@ -37,7 +36,7 @@ declarations: |
   Sometimes I cried.
   
   But mostly I had fun.
-quotation: 'Hope 2025 is better.'
+quotation: 'Hope in 2025 you can code more, better, and with confidence.'
 # Author of the quotation
 qauthor: 'Haoran'
 # Specify the location where the bibliography file is found below
@@ -47,19 +46,6 @@ csl: csl/apa.csl
 lot: true
 lof: true
 ---
-
-<!--
-Above is the YAML (YAML Ain't Markup Language) header that includes a lot of 
-metadata used to produce the document.  Be careful with spacing in this header!
-
-If you'd prefer to not include a Dedication, for example, simply delete the section entirely, or silence them (add # before each line). 
-
-If you have other LaTeX packages you would like to include, delete the # before header-includes and list the packages after hyphens on new lines.
-
-If you'd like to include a comment that won't be produced in your resulting file enclose it in a block like this.
-
-If you receive a duplicate label error after knitting, make sure to delete the index.Rmd file and then knit again.
--->
 
 ```{r include_packages, include = FALSE}
 # This chunk ensures that the macdown package is
@@ -72,48 +58,16 @@ if(!require(macdown))
 library(macdown)
 ```
 
-<!--
-The acknowledgements, preface, dedication, and abstract are added into the PDF
-version automatically by inputting them in the YAML at the top of this file.
--->
-
-<!-- The {.unnumbered} option here means that the introduction will be 
-"Chapter 0." You can also use {-} for no numbers on chapters.
--->
-
 # Preface {.unnumbered}
 
-Welcome to the _R Markdown_ thesis template. This template is based on (and in many places copied directly from) the Reed College LaTeX template, but hopefully it will provide a nicer interface for those that have never used TeX or LaTeX before.  Using _R Markdown_ will also allow you to easily keep track of your analyses in **R** chunks of code, with the resulting plots and output included as well.  The hope is this _R Markdown_ template gets you in the habit of doing reproducible research, which benefits you long-term as a researcher, but also will greatly help anyone that is trying to reproduce or build onto your results down the road.
+This r project `TravelBehaviorQinghai` is created by first-year PhD student [Haoran Xu](https://github.com/Horan517) to produce a model paper for the final course project of ["GEOG712 - Reproducible Research Workflow"](https://github.com/paezha/Reproducible-Research-Workflow/tree/master), taught by [Dr. Antonio Paez](https://experts.mcmaster.ca/display/paezha) at McMaster University, Canada.
 
-Hopefully, you won't have much of a learning period to go through and you will reap the benefits of a nicely formatted thesis.  The use of LaTeX in combination with _Markdown_ is more consistent than the output of a word processor, much less prone to corruption or crashing, and the resulting file is smaller than a Word file. While you may have never had problems using Word in the past, your thesis is likely going to be about twice as large and complex as anything you've written before, taxing Word's capabilities.  After working with _Markdown_ and **R** together for a few weeks, we are confident this will be your reporting style of choice going forward.
-
-<!-- 
-If you're still on the fence about using _R Markdown_, check out the resource
-for newbies available at <https://rbasics.netlify.com>. 
--->
-
-**Why use it?**
-
-_R Markdown_ creates a simple and straightforward way to interface with the beauty of LaTeX.  Packages have been written in **R** to work directly with LaTeX to produce nicely formatting tables and paragraphs. In addition to creating a user friendly interface to LaTeX, _R Markdown_ also allows you to read in your data, to analyze it and to visualize it using **R** functions, and also to provide the documentation and commentary on the results of your project.  Further, it allows for **R** results to be passed inline to the commentary of your results.  You'll see more on this later.  
-
-<!-- 
-Having your code and commentary all together in one place has a plethora of 
-benefits!
--->
-
-**Who should use it?**
-
-Anyone who needs to use data analysis, math, tables, a lot of figures, complex cross-references, or who just cares about the final appearance of their document should use _R Markdown_. Of particular use should be anyone in the sciences, but the user-friendly nature of _Markdown_ and its ability to keep track of and easily include figures, automatically generate a table of contents, index, references, table of figures, etc. should make it of great benefit to nearly anyone writing a thesis project.
-
-**For additional help with bookdown** 
-
-Please visit [the free online bookdown reference guide](https://bookdown.org/yihui/bookdown/).
-
-<!--
-
-BEGINNING HERE ADD THE DOCUMENTS THAT CONFORM THE MAIN BODY OF THE THESIS
-
--->
+The paper is titled "Assessing the influence of tourists’ perceived travel environment and their travel behavior on travel satisfaction using structural equation models (SEM): a case of Qinghai-Tibet Plateau", and stems from a half-way done research project in collaboration with [Dr. Huaxiong Jiang](https://www.researchgate.net/scientific-contributions/Huaxiong-Jiang-2157090528) starting from Jun, 2022 from [Beijing Normal Universtiy, China](https://english.bnu.edu.cn/). 
+The project paused since March of 2023 due to lack of time and energy investment. Therefore, I am taking the chance of this course project to review and re-arrange the previous work I had done nearly two years ago. Main work I did for this course project include:
+  
+  - developing an r package using the existing dataset of Excel format, transforming it into reproducible, open-sourced, and well-cleaned .rda format dataset.
+  - using r package [lavaan](https://lavaan.ugent.be/) to reproduce the [Structural Equations Modeling](https://en.wikipedia.org/wiki/Structural_equation_modeling) (SEM) method, which was previously constructed and performed with [mplus](https://www.statmodel.com/), a commercial software.
+  - writing a model article in r studio using latex syntax, practicing several r packages such as `tidyverse`, `kableExtra`, and `macdown`.
 
 ```{r eval=!knitr::is_latex_output(), child=here::here("01-chap1.Rmd")}
 
